# cred_fnirs_toolkit

./: .gitignore  CLI_USAGE.md  Makefile  README.md  overview.ipynb  pyproject.toml
cred_fnirs_toolkit/: fnirs_toolkit_cli.py  fnirs_toolkit_gui.py
notebooks/: averages_processing.ipynb  processing copy.ipynb
references/: nirsit_full_channel_map.json
